--- a/index.html
+++ b/index.html
@@ -25,11 +25,14 @@ body, html {height: 100%}
     Savage / Savage
   </div>
   <div class="w3-display-middle">
-    <!-- <h1 class="w3-jumbo w3-animate-top">Hello</h1> -->
-    <!-- <hr class="w3-border-grey" style="margin:auto;width:50%"> -->
+    <h1 class="w3-jumbo w3-animate-top">So so Savage!</h1>
+    <hr class="w3-border-grey" style="margin:auto;width:50%">
     <p class="w3-large w3-center">
- Savage / Savage is a film production company specializing in horror and suspense films. Our films are designed to shock and frighten audiences, while also providing a suspenseful and thrilling experience. We believe in making films that are both entertaining and thought-provoking, and our goal is to always push the boundaries of what is possible in cinema.
+About film.
     </p>
+    <!-- <p class="w3-large w3-center">
+ Savage / Savage is a film production company specializing in horror and suspense films. Our films are designed to shock and frighten audiences, while also providing a suspenseful and thrilling experience. We believe in making films that are both entertaining and thought-provoking, and our goal is to always push the boundaries of what is possible in cinema.
+    </p> -->
   </div>
   <div class="w3-display-bottommiddle w3-padding-large">
     hi@savage-savage.com
