--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@ body, html {height: 100%}
 <body>
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-  <div class="w3-display-topleft w3-padding-large w3-xlarge">
+  <div class="w3-padding-large w3-xlarge w3-center w3-padding-32">
     Savage / Savage / Studios
   </div>
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">So so Savage!</h1>
+    <h1 class="w3-jumbo w3-animate-left">Soooo Savage!</h1>
     <!-- <hr class="w3-border-grey" style="margin:auto;width:50%"> -->
     <p class="w3-large w3-center">
 About film.
@@ -37,16 +37,12 @@ About film.
 
   <div>
   <!-- Image -->
-  <img src="banner.png" width="100%" class="w3-display-bottommiddle">
+  <img src="banner.png" width="100%" class="w3-display-bottommiddle w3-padding-82 w3-center">
   <!-- End Image -->
   </div>
   <div class="w3-display-bottommiddle w3-padding-large">
     hi@savage-savage.com
   </div>
 </div>
-
-
-
-
 </body>
 </html>
