--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ body, html {height: 100%}
     <h1 class="w3-jumbo w3-animate-left">Soooo Savage!</h1>
     <!-- <hr class="w3-border-grey" style="margin:auto;width:50%"> -->
     <p class="w3-large w3-center">
-About film.
+About film, art, future.
     </p>
     <!-- <p class="w3-large w3-center">
  Savage / Savage is a film production company specializing in horror and suspense films. Our films are designed to shock and frighten audiences, while also providing a suspenseful and thrilling experience. We believe in making films that are both entertaining and thought-provoking, and our goal is to always push the boundaries of what is possible in cinema.
