--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@ body, html {height: 100%}
     Savage / Savage / Studios
   </div>
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-left">Soooo Savage!</h1>
+    <h1 class="w3-jumbo w3-animate-left w3-hide-medium">Soooo Savage!</h1>
     <!-- <hr class="w3-border-grey" style="margin:auto;width:50%"> -->
-    <p class="w3-large w3-center">
+    <p class="w3-large w3-center w3-hide-medium">
 About film, art, future.
     </p>
     <!-- <p class="w3-large w3-center">
@@ -37,7 +37,7 @@ About film, art, future.
 
   <div>
   <!-- Image -->
-  <img src="banner.png" width="100%" class="w3-display-bottommiddle w3-padding-82 w3-center">
+  <img src="banner.png" width="100%" class="w3-display-bottommiddle w3-padding-82 w3-center w3-hide-small">
   <!-- End Image -->
   </div>
   <div class="w3-display-bottommiddle w3-padding-large">
