--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Savage / Savage Studios</title>
+<title>Savage / Savage Pictures</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -22,12 +22,12 @@ body, html {height: 100%}
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-padding-large w3-xlarge w3-center w3-padding-32">
-    Savage / Savage / Studios
+    SAVAGE / SAVAGE
   </div>
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-left w3-hide-medium">Soooo Savage!</h1>
+    <h1 class="w3-jumbo w3-animate-left w3-hide-large">Soooo Savage!</h1>
     <!-- <hr class="w3-border-grey" style="margin:auto;width:50%"> -->
-    <p class="w3-large w3-center w3-hide-medium">
+    <p class="w3-large w3-center w3-hide-large">
 About film, art, future.
     </p>
     <!-- <p class="w3-large w3-center">
@@ -37,7 +37,7 @@ About film, art, future.
 
   <div>
   <!-- Image -->
-  <img src="banner.png" width="100%" class="w3-display-bottommiddle w3-padding-82 w3-center w3-hide-small">
+  <img src="banner.png" width="100%" class="w3-display-bottommiddle w3-padding-82 w3-center w3-hide-small w3-hide-medium">
   <!-- End Image -->
   </div>
   <div class="w3-display-bottommiddle w3-padding-large">
