--- a/404.html
+++ b/404.html
@@ -22,14 +22,14 @@ body, html {height: 100%}
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <!-- <div class="w3-padding-large w3-xlarge w3-center w3-padding-32">
-    Savage / Savage / Studios
+    Savage / Savage
   </div> -->
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-left w3-hide-medium">You broke our website!</h1>
-    <!-- <hr class="w3-border-grey" style="margin:auto;width:50%"> -->
-    <p class="w3-large w3-center w3-hide-medium">
-You're a real savage too we see... Just joking. Page not found.
-    </p>
+    <p class="w3-large w3-center">
+Page Not Found</p>
+    <h1 class="w3-center">
+404
+</h1>
     <!-- <p class="w3-large w3-center">
  Savage / Savage is a film production company specializing in horror and suspense films. Our films are designed to shock and frighten audiences, while also providing a suspenseful and thrilling experience. We believe in making films that are both entertaining and thought-provoking, and our goal is to always push the boundaries of what is possible in cinema.
     </p> -->
