--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ body, html {height: 100%}
 <body>
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-  <div class="w3-padding-large w3-xlarge w3-center w3-padding-32">
+  <!-- <div class="w3-padding-large w3-xlarge w3-center w3-padding-32">
     SAVAGE / SAVAGE
-  </div>
+  </div> -->
   <div class="w3-display-middle">
     <h1 class="w3-jumbo w3-animate-left w3-hide-large">Soooo Savage!</h1>
     <!-- <hr class="w3-border-grey" style="margin:auto;width:50%"> -->
@@ -34,7 +34,6 @@ About film, art, future.
  Savage / Savage is a film production company specializing in horror and suspense films. Our films are designed to shock and frighten audiences, while also providing a suspenseful and thrilling experience. We believe in making films that are both entertaining and thought-provoking, and our goal is to always push the boundaries of what is possible in cinema.
     </p> -->
   </div>
-
   <div>
   <!-- Image -->
   <img src="banner.png" width="100%" class="w3-display-bottommiddle w3-padding-82 w3-center w3-hide-small w3-hide-medium">
