--- a/index.html
+++ b/index.html
@@ -20,28 +20,35 @@ body, html {height: 100%}
 </head>
 <body>
 
+<div>
+  <img src="banner.png" style="background-color: black; display: block; margin-left: auto; margin-right: auto; width: 100%;" class="w3-padding-82 w3-center w3-show-small w3-hide-medium w3-hide-large">
+</div>
+
+
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-  <!-- <div class="w3-padding-large w3-xlarge w3-center w3-padding-32">
-    SAVAGE / SAVAGE
-  </div> -->
+  <div class="w3-padding-large w3-xxlarge w3-center w3-padding-32">
+    Savage / Savage
+  </div>
+
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-left w3-hide-large">Soooo Savage!</h1>
-    <!-- <hr class="w3-border-grey" style="margin:auto;width:50%"> -->
-    <p class="w3-large w3-center w3-hide-large">
-About film, art, future.
-    </p>
-    <!-- <p class="w3-large w3-center">
- Savage / Savage is a film production company specializing in horror and suspense films. Our films are designed to shock and frighten audiences, while also providing a suspenseful and thrilling experience. We believe in making films that are both entertaining and thought-provoking, and our goal is to always push the boundaries of what is possible in cinema.
-    </p> -->
+    <p style="font-size: 18px; text-align: center;">
+      Savage / Savage is a full service film production company specializing in producing feature films. From development to distribution, we are dedicated to bringing the best possible cinematic experience to audiences worldwide.
+      Savage / Savage は、長編映画の制作を専門とするフルサービスの映画制作会社です。開発から配信まで、世界中の視聴者に最高の映画体験を提供することに専念しています。</p>
   </div>
+  
   <div>
-  <!-- Image -->
-  <img src="banner.png" width="100%" class="w3-display-bottommiddle w3-padding-82 w3-center w3-hide-small w3-hide-medium">
-  <!-- End Image -->
+    
+  <img src="banner.png" style="display: block; margin-left: auto; margin-right: auto; width: 70%;" class="w3-padding-82 w3-center w3-hide-small w3-hide-medium">
+
+  <div class="w3-display-bottommiddle w3-large w3-center w3-padding-20">
+    Savage = 野蛮
   </div>
-  <div class="w3-display-bottommiddle w3-padding-large">
+
+  <div class="w3-display-bottommiddle w3-padding-large w3-medium w3-center w3-padding-32">
     hi@savage-savage.com
   </div>
 </div>
+
+
 </body>
 </html>
